# comicsnet

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  unittest.yml
comicsnet/: __init__.py  config.py  fit.py  frames.py  losses.py  masking.py  result.py
comicsnet/model/: __init__.py  basis.py  conv.py  linear_basis.py
notebook/: comparison_BIRSVD.ipynb  tutorial_BasisAE.ipynb  tutorial_BasisVAE.ipynb  tutorial_ConvAE.ipynb  tutorial_LinearBasisAE.ipynb  tutorial_LinearBasisVAE.ipynb  tutorial_demo_frame.ipynb
tests/: test_config.py  test_fit.py  test_frames.py  test_losses.py  test_masking.py  test_models.py  test_result.py
